--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "@expo-google-fonts/roboto": "^0.4.0",
     "@expo-google-fonts/ubuntu": "^0.4.0",
     "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.1.17",
@@ -24,6 +25,7 @@
     "expo-location": "~18.1.6",
     "expo-mail-composer": "~14.1.5",
     "expo-status-bar": "~2.2.3",
+    "phosphor-react-native": "^3.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
