--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "ts-node-dev --ignore-watch node_modules --respawn src/server.ts",
     "migrate": "node -r ts-node/register ./node_modules/knex/bin/cli.js migrate:latest --knexfile knexfile.ts",
+    "migrate:rollback": "node -r ts-node/register ./node_modules/knex/bin/cli.js migrate:rollback --knexfile knexfile.ts",
     "rollback": "node -r ts-node/register ./node_modules/knex/bin/cli.js migrate:rollback --knexfile knexfile.ts",
     "seed": "node -r ts-node/register ./node_modules/knex/bin/cli.js seed:run --knexfile knexfile.ts"
   },
@@ -15,6 +16,8 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.18",
+    "dotenv": "^17.2.2",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
